--- a/inferno-v0.7.26-mobX-v2.4.4/package.json
+++ b/inferno-v0.7.26-mobX-v2.4.4/package.json
@@ -4,7 +4,7 @@
   "description": "Benchmark for inferno framework",
   "scripts": {
     "build-dev": "webpack -w -d -c webpack.config.js",
-    "build-prod": "webpack -d -c webpack.config.js",
+    "build-prod": "webpack --define process.env.NODE_ENV='\"production\"' -d -c webpack.config.js",
     "start": "http-server -c-1 ."
   },
   "keywords": [
