--- a/react-v15.3.0-mobX-v2.4.2/package.json
+++ b/react-v15.3.0-mobX-v2.4.2/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-dev": "webpack -w -d -c webpack.config.js",
-    "build-prod": "webpack -p -c webpack.config.js",
+    "build-prod": "webpack --define process.env.NODE_ENV='\"production\"' -p -c webpack.config.js",
     "start": "http-server -c-1 ."
   },
   "keywords": [
