--- a/react-v15.3.1-redux-v3.5.2-immutable-js-v3.8.1-pure-render-mixin/package.json
+++ b/react-v15.3.1-redux-v3.5.2-immutable-js-v3.8.1-pure-render-mixin/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "js-framework-benchmark-inferno",
-  "version": "1.0.0",
-  "description": "Benchmark for inferno framework",
+  "name": "js-framework-benchmark-react",
+  "version": "1.1.1",
+  "description": "React demo",
+  "main": "index.js",
   "scripts": {
     "build-dev": "webpack -w -d -c webpack.config.js",
-    "build-prod": "webpack --define process.env.NODE_ENV='\"production\"' -d -c webpack.config.js",
+    "build-prod": "webpack --define process.env.NODE_ENV='\"production\"' -p -c webpack.config.js",
     "start": "http-server -c-1 ."
   },
   "keywords": [
-    "ractive"
+    "react",
+    "webpack"
   ],
   "author": "Stefan Krause",
   "license": "Apache-2.0",
@@ -18,22 +20,19 @@
     "url": "https://github.com/krausest/js-framework-benchmark.git"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-inferno": "^0.7.2",
-    "babel-plugin-syntax-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
+    "jsx-loader": "^0.13.2",
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "inferno": "0.7.26",
-    "inferno-component": "0.7.26",
-    "inferno-dom": "0.7.26",
-    "inferno-redux": "0.7.26",
     "immutable": "v3.8.1",
     "react": "15.3.1",
-    "react-addons-shallow-compare": "15.3.0",
+    "react-addons-shallow-compare": "15.3.1",
+    "react-dom": "15.3.1",
+    "react-redux": "4.4.5",
     "redux": "3.5.2"
   }
 }
