--- a/react-v15.3.1-redux-v3.5.2-immutable-js-v3.8.1/package.json
+++ b/react-v15.3.1-redux-v3.5.2-immutable-js-v3.8.1/package.json
@@ -28,8 +28,9 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "react": "15.3.0",
-    "react-dom": "15.3.0",
+    "immutable": "v3.8.1",
+    "react": "15.3.1",
+    "react-dom": "15.3.1",
     "react-redux": "4.4.5",
     "redux": "3.5.2"
   }
